# clboss

./: .dir-locals.el  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  COPYING  ChangeLog  Makefile.am  README.md  Sqlite3.hpp  Uuid.cpp  Uuid.hpp  configure.ac  contrib-shell.nix  create-tarball.in  dev-boltz-api.cpp  dev-boltz.cpp  dev-proxy-connect.cpp  flake.nix  generate_commit_hash.sh  main.cpp  new-mod
.github/workflows/: build.yml  release.yml
Bitcoin/: Tx.cpp  Tx.hpp  TxId.cpp  TxId.hpp  TxIn.cpp  TxIn.hpp  TxOut.cpp  TxOut.hpp  WitnessField.cpp  WitnessField.hpp  addr_to_scriptPubKey.cpp  addr_to_scriptPubKey.hpp  hash160.cpp  hash160.hpp  le.cpp  le.hpp  pubkey_to_scriptPubKey.cpp  pubkey_to_scriptPubKey.hpp  sighash.cpp  sighash.hpp  varint.cpp  varint.hpp
Boltz/: Connection.cpp  Connection.hpp  ConnectionIF.hpp  EnvIF.hpp  Service.hpp  ServiceFactory.cpp  ServiceFactory.hpp  SwapInfo.hpp
Boltz/Detail/: ClaimTxHandler.cpp  ClaimTxHandler.hpp  FallbackConnection.cpp  FallbackConnection.hpp  MusigImpl.hpp  NormalConnection.cpp  NormalConnection.hpp  NullConnection.cpp  NullConnection.hpp  ServiceImpl.cpp  ServiceImpl.hpp  SwapSetupHandler.cpp  SwapSetupHandler.hpp  compute_preimage.cpp  compute_preimage.hpp  create_connection.cpp  create_connection.hpp  find_lockup_outnum.cpp  find_lockup_outnum.hpp  initial_claim_tx.cpp  initial_claim_tx.hpp  match_lockscript.cpp  match_lockscript.hpp  swaptree.cpp  swaptree.hpp
Boss/: JsonInput.cpp  JsonInput.hpp  Main.cpp  Main.hpp  Shutdown.hpp  Signer.cpp  Signer.hpp  concurrent.cpp  concurrent.hpp  log.cpp  log.hpp  open_rpc_socket.cpp  open_rpc_socket.hpp  random_engine.cpp  random_engine.hpp
Boss/Mod/: ActiveProber.cpp  ActiveProber.hpp  AmountSettingsHandler.cpp  AmountSettingsHandler.hpp  AutoDisconnector.cpp  AutoDisconnector.hpp  AutoOpenController.cpp  AutoOpenController.hpp  AutoSwapController.cpp  AutoSwapController.hpp  AvailableRpcCommandsAnnouncer.cpp  AvailableRpcCommandsAnnouncer.hpp  BlockTracker.cpp  BlockTracker.hpp  ChannelCandidateMatchmaker.cpp  ChannelCandidateMatchmaker.hpp  ChannelCandidatePreinvestigator.cpp  ChannelCandidatePreinvestigator.hpp  ChannelCreateDestroyMonitor.cpp  ChannelCreateDestroyMonitor.hpp  ChannelCreationDecider.cpp  ChannelCreationDecider.hpp  ChannelFeeManager.cpp  ChannelFeeManager.hpp  ChannelFeeSetter.cpp  ChannelFeeSetter.hpp  ChannelFinderByDistance.cpp  ChannelFinderByDistance.hpp  ChannelFinderByEarnedFee.cpp  ChannelFinderByEarnedFee.hpp  ChannelFinderByListpays.cpp  ChannelFinderByListpays.hpp  ChannelFinderByPopularity.cpp  ChannelFinderByPopularity.hpp  ChannelFundsComputer.cpp  ChannelFundsComputer.hpp  CircularRebalanceController.cpp  CircularRebalanceController.hpp  CommandReceiver.cpp  CommandReceiver.hpp  (+117 more)
Boss/ModG/: RebalanceUnmanagerProxy.hpp  ReqResp.hpp  RpcProxy.cpp  RpcProxy.hpp  Swapper.cpp  Swapper.hpp  TimedBoolean.hpp  TimedBooleanController.hpp
Boss/Msg/: .gitignore  AcceptSwapQuotation.hpp  AmountSettings.hpp  AvailableRpcCommands.hpp  Begin.hpp  Block.hpp  ChannelCreateResult.hpp  ChannelCreation.hpp  ChannelDestruction.hpp  ChannelFunds.hpp  CommandFail.hpp  CommandRequest.hpp  CommandResponse.hpp  DbResource.hpp  EndOfOptions.hpp  ForwardFee.hpp  Init.hpp  InternetOnline.hpp  JsonCin.hpp  JsonCout.hpp  ListfundsAnalyzedResult.hpp  ListfundsResult.hpp  ListpeersAnalyzedResult.hpp  ListpeersResult.hpp  ManifestCommand.hpp  ManifestHook.hpp  ManifestNotification.hpp  ManifestOption.hpp  Manifestation.hpp  NeedsConnect.hpp  NeedsOnchainFunds.hpp  Network.hpp  Notification.hpp  OnchainFee.hpp  OnchainFunds.hpp  Option.hpp  OptionType.hpp  PatronizeChannelCandidate.hpp  PayInvoice.hpp  PeerMedianChannelFee.hpp  (+74 more)
DnsSeed/: get.cpp  get.hpp
DnsSeed/Detail/: decode_bech32_node.cpp  decode_bech32_node.hpp  parse_dig_srv.cpp  parse_dig_srv.hpp
Ev/: Io.hpp  README.md  Semaphore.cpp  Semaphore.hpp  ThreadPool.cpp  ThreadPool.hpp  concurrent.cpp  concurrent.hpp  coroutine.cpp  coroutine.hpp  foreach.hpp  map.hpp  memoize.hpp  now.cpp  now.hpp  runcmd.cpp  runcmd.hpp  start.cpp  start.hpp  yield.cpp  yield.hpp
Graph/: Dijkstra.hpp  TreeNode.hpp
Jsmn/: Object.cpp  Object.hpp  ParseError.cpp  ParseError.hpp  Parser.cpp  Parser.hpp  ParserExposedBuffer.cpp  ParserExposedBuffer.hpp  jsonify_string.cpp  jsonify_string.hpp
Jsmn/Detail/: DatumIdentifier.hpp  Str.cpp  (+9 more)
Json/: Out.hpp
Ln/: Amount.cpp  Amount.hpp  CommandId.cpp  CommandId.hpp  HtlcAccepted.cpp  HtlcAccepted.hpp  NodeId.cpp  NodeId.hpp  Preimage.cpp  Preimage.hpp  Scid.cpp  Scid.hpp
Net/: Connector.hpp  DirectConnector.cpp  DirectConnector.hpp  Fd.cpp  Fd.hpp  IPAddr.cpp  IPAddr.hpp  IPAddrOrOnion.cpp  IPAddrOrOnion.hpp  IPBinnerBySubnet.cpp  IPBinnerBySubnet.hpp  IPBinnerIF.hpp  ProxyConnector.cpp  ProxyConnector.hpp  SocketFd.cpp  SocketFd.hpp  get_bin_of_onion.cpp  get_bin_of_onion.hpp
Ripemd160/: Hash.cpp  Hash.hpp  Hasher.cpp  Hasher.hpp
S/: Bus.cpp  Bus.hpp
Secp256k1/: G.cpp  G.hpp  KeyPair.hpp  Musig.cpp  Musig.hpp  PrivKey.cpp  PrivKey.hpp  PubKey.cpp  PubKey.hpp  Random.cpp  Random.hpp  Signature.cpp  Signature.hpp  SignerIF.hpp  TapscriptTree.cpp  TapscriptTree.hpp  tagged_hashes.cpp  tagged_hashes.hpp
Sha256/: Hash.cpp  Hash.hpp  Hasher.cpp  Hasher.hpp  HasherStream.cpp  HasherStream.hpp  fun.hpp
Sqlite3/: Db.cpp  Db.hpp  Query.cpp  Query.hpp  README.md  Result.cpp  Result.hpp  Tx.cpp  Tx.hpp
Stats/: ReservoirSampler.hpp  RunningMean.cpp  RunningMean.hpp  WeightedMedian.hpp
Util/: BacktraceException.hpp  Bech32.cpp  Bech32.hpp  Compiler.hpp  Either.hpp  Rw.cpp  Rw.hpp  Str.cpp  Str.hpp  date.cpp  date.hpp  duration.cpp  duration.hpp  format.cpp  format.hpp  make_unique.hpp  stream_elements.hpp  stringify.hpp  vector_emplace_back.hpp
contrib/: README.md  clboss-earnings-history  clboss-forwarding-stats  clboss-recent-earnings  clboss-routing-stats  pyproject.toml  recently-closed  sys_stats_report
contrib/clboss/: alias_cache.py
docs/: channel_balancing.md
reproducible/: .gitignore  README.md  build.sh  continue.sh  manifest.scm.template
tests/: test_uuid.cpp
(+168 files in other folders)
