bin_PROGRAMS = clboss
clboss_SOURCES = \
	main.cpp
noinst_PROGRAMS = \
	dev-boltz \
	dev-boltz-api

# These are the actual source files of clboss.
# We separate them here so that we can test parts of
# clboss without having to put a lot of instrumentation
# in the main file.
noinst_LTLIBRARIES = libclboss.la
libclboss_la_SOURCES = \
	Bitcoin/Tx.cpp \
	Bitcoin/Tx.hpp \
	Bitcoin/TxId.cpp \
	Bitcoin/TxId.hpp \
	Bitcoin/TxIn.cpp \
	Bitcoin/TxIn.hpp \
	Bitcoin/TxOut.cpp \
	Bitcoin/TxOut.hpp \
	Bitcoin/WitnessField.cpp \
	Bitcoin/WitnessField.hpp \
	Bitcoin/addr_to_scriptPubKey.cpp \
	Bitcoin/addr_to_scriptPubKey.hpp \
	Bitcoin/hash160.cpp \
	Bitcoin/hash160.hpp \
	Bitcoin/le.cpp \
	Bitcoin/le.hpp \
	Bitcoin/sighash.cpp \
	Bitcoin/sighash.hpp \
	Bitcoin/varint.cpp \
	Bitcoin/varint.hpp \
	Boltz/Connection.cpp \
	Boltz/Connection.hpp \
	Boltz/Detail/ClaimTxHandler.cpp \
	Boltz/Detail/ClaimTxHandler.hpp \
	Boltz/Detail/ServiceImpl.cpp \
	Boltz/Detail/ServiceImpl.hpp \
	Boltz/Detail/SwapSetupHandler.cpp \
	Boltz/Detail/SwapSetupHandler.hpp \
	Boltz/Detail/compute_preimage.cpp \
	Boltz/Detail/compute_preimage.hpp \
	Boltz/Detail/find_lockup_outnum.cpp \
	Boltz/Detail/find_lockup_outnum.hpp \
	Boltz/Detail/initial_claim_tx.cpp \
	Boltz/Detail/initial_claim_tx.hpp \
	Boltz/Detail/match_lockscript.cpp \
	Boltz/Detail/match_lockscript.hpp \
	Boltz/EnvIF.hpp \
	Boltz/ServiceFactory.cpp \
	Boltz/ServiceFactory.hpp \
	Boss/JsonInput.cpp \
	Boss/JsonInput.hpp \
	Boss/Main.cpp \
	Boss/Main.hpp \
	Boss/Mod/AutoDisconnector.cpp \
	Boss/Mod/AutoDisconnector.hpp \
	Boss/Mod/BlockTracker.cpp \
	Boss/Mod/BlockTracker.hpp \
	Boss/Mod/BoltzSwapper/Env.cpp \
	Boss/Mod/BoltzSwapper/Env.hpp \
	Boss/Mod/BoltzSwapper/Main.cpp \
	Boss/Mod/BoltzSwapper/Main.hpp \
	Boss/Mod/BoltzSwapper/ServiceCreator.cpp \
	Boss/Mod/BoltzSwapper/ServiceCreator.hpp \
	Boss/Mod/BoltzSwapper/ServiceModule.cpp \
	Boss/Mod/BoltzSwapper/ServiceModule.hpp \
	Boss/Mod/CommandReceiver.cpp \
	Boss/Mod/CommandReceiver.hpp \
	Boss/Mod/ChannelCandidateInvestigator/Gumshoe.cpp \
	Boss/Mod/ChannelCandidateInvestigator/Gumshoe.hpp \
	Boss/Mod/ChannelCandidateInvestigator/Main.cpp \
	Boss/Mod/ChannelCandidateInvestigator/Main.hpp \
	Boss/Mod/ChannelCandidateInvestigator/Manager.cpp \
	Boss/Mod/ChannelCandidateInvestigator/Manager.hpp \
	Boss/Mod/ChannelCandidateInvestigator/Secretary.cpp \
	Boss/Mod/ChannelCandidateInvestigator/Secretary.hpp \
	Boss/Mod/ChannelCandidatePreinvestigator.cpp \
	Boss/Mod/ChannelCandidatePreinvestigator.hpp \
	Boss/Mod/ChannelCreationDecider.cpp \
	Boss/Mod/ChannelCreationDecider.hpp \
	Boss/Mod/ChannelCreator/Carpenter.cpp \
	Boss/Mod/ChannelCreator/Carpenter.hpp \
	Boss/Mod/ChannelCreator/Dowser.cpp \
	Boss/Mod/ChannelCreator/Dowser.hpp \
	Boss/Mod/ChannelCreator/Main.cpp \
	Boss/Mod/ChannelCreator/Main.hpp \
	Boss/Mod/ChannelCreator/Manager.cpp \
	Boss/Mod/ChannelCreator/Manager.hpp \
	Boss/Mod/ChannelCreator/Planner.cpp \
	Boss/Mod/ChannelCreator/Planner.hpp \
	Boss/Mod/ChannelFinderByPopularity.cpp \
	Boss/Mod/ChannelFinderByPopularity.hpp \
	Boss/Mod/ChannelFundsComputer.cpp \
	Boss/Mod/ChannelFundsComputer.hpp \
	Boss/Mod/ConnectFinderByDns.cpp \
	Boss/Mod/ConnectFinderByDns.hpp \
	Boss/Mod/ConnectFinderByHardcode.cpp \
	Boss/Mod/ConnectFinderByHardcode.hpp \
	Boss/Mod/Connector.cpp \
	Boss/Mod/Connector.hpp \
	Boss/Mod/InitialConnect.cpp \
	Boss/Mod/InitialConnect.hpp \
	Boss/Mod/Initiator.cpp \
	Boss/Mod/Initiator.hpp \
	Boss/Mod/InternetConnectionMonitor.cpp \
	Boss/Mod/InternetConnectionMonitor.hpp \
	Boss/Mod/InvoicePayer.cpp \
	Boss/Mod/InvoicePayer.hpp \
	Boss/Mod/JsonOutputter.cpp \
	Boss/Mod/JsonOutputter.hpp \
	Boss/Mod/ListfundsAnnouncer.cpp \
	Boss/Mod/ListfundsAnnouncer.hpp \
	Boss/Mod/ListpeersAnalyzer.cpp \
	Boss/Mod/ListpeersAnalyzer.hpp \
	Boss/Mod/ListpeersAnnouncer.cpp \
	Boss/Mod/ListpeersAnnouncer.hpp \
	Boss/Mod/Manifester.cpp \
	Boss/Mod/Manifester.hpp \
	Boss/Mod/NeedsConnectSolicitor.cpp \
	Boss/Mod/NeedsConnectSolicitor.hpp \
	Boss/Mod/OnchainFeeMonitor.cpp \
	Boss/Mod/OnchainFeeMonitor.hpp \
	Boss/Mod/OnchainFundsAnnouncer.cpp \
	Boss/Mod/OnchainFundsAnnouncer.hpp \
	Boss/Mod/Reconnector.cpp \
	Boss/Mod/Reconnector.hpp \
	Boss/Mod/Rpc.cpp \
	Boss/Mod/Rpc.hpp \
	Boss/Mod/StatusCommand.cpp \
	Boss/Mod/StatusCommand.hpp \
	Boss/Mod/Timers.cpp \
	Boss/Mod/Timers.hpp \
	Boss/Mod/Waiter.cpp \
	Boss/Mod/Waiter.hpp \
	Boss/Mod/all.cpp \
	Boss/Mod/all.hpp \
	Boss/Msg/AcceptSwapQuotation.hpp \
	Boss/Msg/Begin.hpp \
	Boss/Msg/Block.hpp \
	Boss/Msg/ChannelCreateResult.hpp \
	Boss/Msg/ChannelFunds.hpp \
	Boss/Msg/CommandRequest.hpp \
	Boss/Msg/CommandResponse.hpp \
	Boss/Msg/DbResource.hpp \
	Boss/Msg/Init.hpp \
	Boss/Msg/JsonCin.hpp \
	Boss/Msg/JsonCout.hpp \
	Boss/Msg/ListfundsResult.hpp \
	Boss/Msg/ListpeersAnalyzedResult.hpp \
	Boss/Msg/ListpeersResult.hpp \
	Boss/Msg/ManifestCommand.hpp \
	Boss/Msg/ManifestHook.hpp \
	Boss/Msg/ManifestNotification.hpp \
	Boss/Msg/Manifestation.hpp \
	Boss/Msg/NeedsConnect.hpp \
	Boss/Msg/Network.hpp \
	Boss/Msg/Notification.hpp \
	Boss/Msg/OnchainFee.hpp \
	Boss/Msg/OnchainFunds.hpp \
	Boss/Msg/PayInvoice.hpp \
	Boss/Msg/PreinvestigateChannelCandidates.hpp \
	Boss/Msg/ProposeChannelCandidates.hpp \
	Boss/Msg/ProposeConnectCandidates.hpp \
	Boss/Msg/ProvideStatus.hpp \
	Boss/Msg/ProvideSwapQuotation.hpp \
	Boss/Msg/RequestChannelCreation.hpp \
	Boss/Msg/RequestConnect.hpp \
	Boss/Msg/ResponseConnect.hpp \
	Boss/Msg/SolicitChannelCandidates.hpp \
	Boss/Msg/SolicitConnectCandidates.hpp \
	Boss/Msg/SolicitStatus.hpp \
	Boss/Msg/SolicitSwapQuotation.hpp \
	Boss/Msg/SwapCreation.hpp \
	Boss/Msg/TaskCompletion.hpp \
	Boss/Msg/Timer10Minutes.hpp \
	Boss/Msg/TimerRandomDaily.hpp \
	Boss/Msg/TimerRandomHourly.hpp \
	Boss/Shutdown.hpp \
	Boss/Signer.cpp \
	Boss/Signer.hpp \
	Boss/concurrent.cpp \
	Boss/concurrent.hpp \
	Boss/log.cpp \
	Boss/log.hpp \
	Boss/random_engine.cpp \
	Boss/random_engine.hpp \
	Boss/open_rpc_socket.cpp \
	Boss/open_rpc_socket.hpp \
	DnsSeed/Detail/decode_bech32_node.cpp \
	DnsSeed/Detail/decode_bech32_node.hpp \
	DnsSeed/Detail/parse_dig_srv.cpp \
	DnsSeed/Detail/parse_dig_srv.hpp \
	DnsSeed/get.cpp \
	DnsSeed/get.hpp \
	Ev/Io.hpp \
	Ev/ThreadPool.cpp \
	Ev/ThreadPool.hpp \
	Ev/concurrent.cpp \
	Ev/concurrent.hpp \
	Ev/foreach.hpp \
	Ev/map.hpp \
	Ev/runcmd.cpp \
	Ev/runcmd.hpp \
	Ev/start.cpp \
	Ev/start.hpp \
	Ev/yield.cpp \
	Ev/yield.hpp \
	Jsmn/Detail/EndAdvancer.cpp \
	Jsmn/Detail/EndAdvancer.hpp \
	Jsmn/Detail/ParseResult.hpp \
	Jsmn/Detail/Str.cpp \
	Jsmn/Detail/Str.hpp \
	Jsmn/Detail/Token.cpp \
	Jsmn/Detail/Token.hpp \
	Jsmn/Detail/Type.hpp \
	Jsmn/Object.cpp \
	Jsmn/Object.hpp \
	Jsmn/Parser.cpp \
	Jsmn/Parser.hpp \
	Jsmn/jsonify_string.cpp \
	Jsmn/jsonify_string.hpp \
	Json/Out.hpp \
	Ln/Amount.cpp \
	Ln/Amount.hpp \
	Ln/NodeId.cpp \
	Ln/NodeId.hpp \
	Ln/Preimage.cpp \
	Ln/Preimage.hpp \
	Ln/Scid.cpp \
	Ln/Scid.hpp \
	Net/Connector.hpp \
	Net/Detail/AddrInfoReleaser.cpp \
	Net/Detail/AddrInfoReleaser.hpp \
	Net/DirectConnector.cpp \
	Net/DirectConnector.hpp \
	Net/Fd.cpp \
	Net/Fd.hpp \
	Net/ProxyConnector.cpp \
	Net/ProxyConnector.hpp \
	Net/SocketFd.cpp \
	Net/SocketFd.hpp \
	Ripemd160/Hash.cpp \
	Ripemd160/Hash.hpp \
	Ripemd160/Hasher.cpp \
	Ripemd160/Hasher.hpp \
	S/Bus.cpp \
	S/Bus.hpp \
	S/Detail/Signal.hpp \
	S/Detail/SignalBase.hpp \
	Secp256k1/Detail/context.cpp \
	Secp256k1/Detail/context.hpp \
	Secp256k1/G.cpp \
	Secp256k1/G.hpp \
	Secp256k1/KeyPair.hpp \
	Secp256k1/PrivKey.cpp \
	Secp256k1/PrivKey.hpp \
	Secp256k1/PubKey.cpp \
	Secp256k1/PubKey.hpp \
	Secp256k1/Random.cpp \
	Secp256k1/Random.hpp \
	Secp256k1/Signature.cpp \
	Secp256k1/Signature.hpp \
	Secp256k1/SignerIF.hpp \
	Sha256/Hash.cpp \
	Sha256/Hash.hpp \
	Sha256/Hasher.cpp \
	Sha256/Hasher.hpp \
	Sha256/HasherStream.cpp \
	Sha256/HasherStream.hpp \
	Sha256/fun.hpp \
	Sqlite3.hpp \
	Sqlite3/Db.cpp \
	Sqlite3/Db.hpp \
	Sqlite3/Detail/binds.cpp \
	Sqlite3/Detail/binds.hpp \
	Sqlite3/Detail/columns.cpp \
	Sqlite3/Detail/columns.hpp \
	Sqlite3/Query.cpp \
	Sqlite3/Query.hpp \
	Sqlite3/Result.cpp \
	Sqlite3/Result.hpp \
	Sqlite3/Tx.cpp \
	Sqlite3/Tx.hpp \
	Stats/RunningMean.cpp \
	Stats/RunningMean.hpp \
	Util/Bech32.cpp \
	Util/Bech32.hpp \
	Util/Rw.cpp \
	Util/Rw.hpp \
	Util/Str.cpp \
	Util/Str.hpp \
	Util/make_unique.hpp \
	Util/stringify.hpp \
	Uuid.cpp \
	Uuid.hpp

libclboss_la_LIBADD = \
	external/bitcoin-ripemd160/libbitcoin-ripemd160.la \
	external/libsodium/src/libsodium/libsodium.la \
	external/secp256k1/libsecp256k1.la
libclboss_la_CPPFLAGS = \
	-I$(top_srcdir)/external/bitcoin-ripemd160/ \
	-I$(top_srcdir)/external/libsodium/src/libsodium/include/ \
	-I$(top_srcdir)/external/secp256k1/include/ \
	-I$(top_srcdir)/external/jsmn

# Externals
SUBDIRS = \
	external/bitcoin-ripemd160 \
	external/libsodium/ \
	external/secp256k1/
EXTRA_DIST = \
	external/jsmn/LICENSE \
	external/jsmn/jsmn.h

AM_CXXFLAGS = -Wall -Werror $(PTHREAD_CFLAGS) $(libev_CFLAGS) $(SQLITE3_CFLAGS) $(CURL_CFLAGS)
LDADD = libclboss.la $(PTHREAD_LIBS) $(libev_LIBS) $(SQLITE3_LIBS) $(CURL_LIBS)

ACLOCAL_AMFLAGS = -I m4

AM_DEFAULT_SOURCE_EXT = .cpp
TESTS = \
	tests/bitcoin/test_addr_to_scriptpubkey \
	tests/bitcoin/test_serial \
	tests/bitcoin/test_sighash \
	tests/bitcoin/test_tx \
	tests/boltz/test_match_lockscript \
	tests/boss/channelcandidateinvestigator/test_gumshoe \
	tests/boss/channelcandidateinvestigator/test_secretary \
	tests/boss/test_channelcreationdecider \
	tests/boss/test_channelcreator_planner \
	tests/boss/test_needsconnectsolicitor \
	tests/boss/test_rpc \
	tests/boss/test_version \
	tests/boss/test_waiter_timed \
	tests/dnsseed/test_decode_bech32_node \
	tests/dnsseed/test_get \
	tests/dnsseed/test_parse_dig_srv \
	tests/ev/test_concurrent_simple \
	tests/ev/test_io_mem_leak \
	tests/ev/test_map \
	tests/ev/test_runcmd \
	tests/ev/test_throw_in_then \
	tests/json/test_out_simple \
	tests/ln/test_amount \
	tests/ln/test_nodeid \
	tests/ln/test_scid \
	tests/ripemd160/test_ripemd160 \
	tests/s/test_bus \
	tests/sha256/test_hash \
	tests/sha256/test_hasher \
	tests/sqlite3/test_sqlite3 \
	tests/stats/test_running_mean \
	tests/test_uuid
check_PROGRAMS = $(TESTS)
