bin_PROGRAMS = clboss
clboss_SOURCES = \
	main.cpp
noinst_PROGRAMS = \
	dev-boltz \
	dev-boltz-api \
	dev-proxy-connect

# These are the actual source files of clboss.
# We separate them here so that we can test parts of
# clboss without having to put a lot of instrumentation
# in the main file.
noinst_LTLIBRARIES = libclboss.la
libclboss_la_SOURCES = \
	Bitcoin/Tx.cpp \
	Bitcoin/Tx.hpp \
	Bitcoin/TxId.cpp \
	Bitcoin/TxId.hpp \
	Bitcoin/TxIn.cpp \
	Bitcoin/TxIn.hpp \
	Bitcoin/TxOut.cpp \
	Bitcoin/TxOut.hpp \
	Bitcoin/WitnessField.cpp \
	Bitcoin/WitnessField.hpp \
	Bitcoin/addr_to_scriptPubKey.cpp \
	Bitcoin/addr_to_scriptPubKey.hpp \
	Bitcoin/hash160.cpp \
	Bitcoin/hash160.hpp \
	Bitcoin/le.cpp \
	Bitcoin/le.hpp \
	Bitcoin/sighash.cpp \
	Bitcoin/sighash.hpp \
	Bitcoin/varint.cpp \
	Bitcoin/varint.hpp \
	Boltz/Connection.cpp \
	Boltz/Connection.hpp \
	Boltz/Detail/ClaimTxHandler.cpp \
	Boltz/Detail/ClaimTxHandler.hpp \
	Boltz/Detail/ServiceImpl.cpp \
	Boltz/Detail/ServiceImpl.hpp \
	Boltz/Detail/SwapSetupHandler.cpp \
	Boltz/Detail/SwapSetupHandler.hpp \
	Boltz/Detail/compute_preimage.cpp \
	Boltz/Detail/compute_preimage.hpp \
	Boltz/Detail/find_lockup_outnum.cpp \
	Boltz/Detail/find_lockup_outnum.hpp \
	Boltz/Detail/initial_claim_tx.cpp \
	Boltz/Detail/initial_claim_tx.hpp \
	Boltz/Detail/match_lockscript.cpp \
	Boltz/Detail/match_lockscript.hpp \
	Boltz/EnvIF.hpp \
	Boltz/Service.hpp \
	Boltz/ServiceFactory.cpp \
	Boltz/ServiceFactory.hpp \
	Boltz/SwapInfo.hpp \
	Boss/JsonInput.cpp \
	Boss/JsonInput.hpp \
	Boss/Main.cpp \
	Boss/Main.hpp \
	Boss/Mod/ActiveProber.cpp \
	Boss/Mod/ActiveProber.hpp \
	Boss/Mod/AutoDisconnector.cpp \
	Boss/Mod/AutoDisconnector.hpp \
	Boss/Mod/BlockTracker.cpp \
	Boss/Mod/BlockTracker.hpp \
	Boss/Mod/BoltzSwapper/Env.cpp \
	Boss/Mod/BoltzSwapper/Env.hpp \
	Boss/Mod/BoltzSwapper/Main.cpp \
	Boss/Mod/BoltzSwapper/Main.hpp \
	Boss/Mod/BoltzSwapper/ServiceCreator.cpp \
	Boss/Mod/BoltzSwapper/ServiceCreator.hpp \
	Boss/Mod/BoltzSwapper/ServiceModule.cpp \
	Boss/Mod/BoltzSwapper/ServiceModule.hpp \
	Boss/Mod/ChannelFeeManager.cpp \
	Boss/Mod/ChannelFeeManager.hpp \
	Boss/Mod/CommandReceiver.cpp \
	Boss/Mod/CommandReceiver.hpp \
	Boss/Mod/ChannelCandidateInvestigator/Gumshoe.cpp \
	Boss/Mod/ChannelCandidateInvestigator/Gumshoe.hpp \
	Boss/Mod/ChannelCandidateInvestigator/Main.cpp \
	Boss/Mod/ChannelCandidateInvestigator/Main.hpp \
	Boss/Mod/ChannelCandidateInvestigator/Manager.cpp \
	Boss/Mod/ChannelCandidateInvestigator/Manager.hpp \
	Boss/Mod/ChannelCandidateInvestigator/Secretary.cpp \
	Boss/Mod/ChannelCandidateInvestigator/Secretary.hpp \
	Boss/Mod/ChannelCandidateMatchmaker.cpp \
	Boss/Mod/ChannelCandidateMatchmaker.hpp \
	Boss/Mod/ChannelCandidatePreinvestigator.cpp \
	Boss/Mod/ChannelCandidatePreinvestigator.hpp \
	Boss/Mod/ChannelCreateDestroyMonitor.cpp \
	Boss/Mod/ChannelCreateDestroyMonitor.hpp \
	Boss/Mod/ChannelCreationDecider.cpp \
	Boss/Mod/ChannelCreationDecider.hpp \
	Boss/Mod/ChannelCreator/Carpenter.cpp \
	Boss/Mod/ChannelCreator/Carpenter.hpp \
	Boss/Mod/ChannelCreator/Main.cpp \
	Boss/Mod/ChannelCreator/Main.hpp \
	Boss/Mod/ChannelCreator/Manager.cpp \
	Boss/Mod/ChannelCreator/Manager.hpp \
	Boss/Mod/ChannelCreator/Planner.cpp \
	Boss/Mod/ChannelCreator/Planner.hpp \
	Boss/Mod/ChannelCreator/RearrangerBySize.cpp \
	Boss/Mod/ChannelCreator/RearrangerBySize.hpp \
	Boss/Mod/ChannelCreator/Reprioritizer.cpp \
	Boss/Mod/ChannelCreator/Reprioritizer.hpp \
	Boss/Mod/ChannelFeeSetter.cpp \
	Boss/Mod/ChannelFeeSetter.hpp \
	Boss/Mod/ChannelFinderByDistance.cpp \
	Boss/Mod/ChannelFinderByDistance.hpp \
	Boss/Mod/ChannelFinderByEarnedFee.cpp \
	Boss/Mod/ChannelFinderByEarnedFee.hpp \
	Boss/Mod/ChannelFinderByListpays.cpp \
	Boss/Mod/ChannelFinderByListpays.hpp \
	Boss/Mod/ChannelFinderByPopularity.cpp \
	Boss/Mod/ChannelFinderByPopularity.hpp \
	Boss/Mod/ChannelFundsComputer.cpp \
	Boss/Mod/ChannelFundsComputer.hpp \
	Boss/Mod/ComplainerByLowConnectRate.cpp \
	Boss/Mod/ComplainerByLowConnectRate.hpp \
	Boss/Mod/ComplainerByLowSuccessPerDay.cpp \
	Boss/Mod/ComplainerByLowSuccessPerDay.hpp \
	Boss/Mod/ConnectFinderByDns.cpp \
	Boss/Mod/ConnectFinderByDns.hpp \
	Boss/Mod/ConnectFinderByHardcode.cpp \
	Boss/Mod/ConnectFinderByHardcode.hpp \
	Boss/Mod/Connector.cpp \
	Boss/Mod/Connector.hpp \
	Boss/Mod/Dowser.cpp \
	Boss/Mod/Dowser.hpp \
	Boss/Mod/EarningsRebalancer.cpp \
	Boss/Mod/EarningsRebalancer.hpp \
	Boss/Mod/EarningsTracker.cpp \
	Boss/Mod/EarningsTracker.hpp \
	Boss/Mod/FeeModderByBalance.cpp \
	Boss/Mod/FeeModderByBalance.hpp \
	Boss/Mod/FeeModderByPriceTheory.cpp \
	Boss/Mod/FeeModderByPriceTheory.hpp \
	Boss/Mod/FeeModderBySize.cpp \
	Boss/Mod/FeeModderBySize.hpp \
	Boss/Mod/ForwardFeeMonitor.cpp \
	Boss/Mod/ForwardFeeMonitor.hpp \
	Boss/Mod/FundsMover/Attempter.cpp \
	Boss/Mod/FundsMover/Attempter.hpp \
	Boss/Mod/FundsMover/Claimer.cpp \
	Boss/Mod/FundsMover/Claimer.hpp \
	Boss/Mod/FundsMover/Main.cpp \
	Boss/Mod/FundsMover/Main.hpp \
	Boss/Mod/FundsMover/PaymentDeleter.cpp \
	Boss/Mod/FundsMover/PaymentDeleter.hpp \
	Boss/Mod/FundsMover/Runner.cpp \
	Boss/Mod/FundsMover/Runner.hpp \
	Boss/Mod/FundsMover/create_label.cpp \
	Boss/Mod/FundsMover/create_label.hpp \
	Boss/Mod/HtlcAcceptor.cpp \
	Boss/Mod/HtlcAcceptor.hpp \
	Boss/Mod/InitialConnect.cpp \
	Boss/Mod/InitialConnect.hpp \
	Boss/Mod/InitialRebalancer.cpp \
	Boss/Mod/InitialRebalancer.hpp \
	Boss/Mod/Initiator.cpp \
	Boss/Mod/Initiator.hpp \
	Boss/Mod/InternetConnectionMonitor.cpp \
	Boss/Mod/InternetConnectionMonitor.hpp \
	Boss/Mod/InvoicePayer.cpp \
	Boss/Mod/InvoicePayer.hpp \
	Boss/Mod/JitRebalancer.cpp \
	Boss/Mod/JitRebalancer.hpp \
	Boss/Mod/JsonOutputter.cpp \
	Boss/Mod/JsonOutputter.hpp \
	Boss/Mod/ListfundsAnnouncer.cpp \
	Boss/Mod/ListfundsAnnouncer.hpp \
	Boss/Mod/ListpaysHandler.cpp \
	Boss/Mod/ListpaysHandler.hpp \
	Boss/Mod/ListpeersAnalyzer.cpp \
	Boss/Mod/ListpeersAnalyzer.hpp \
	Boss/Mod/ListpeersAnnouncer.cpp \
	Boss/Mod/ListpeersAnnouncer.hpp \
	Boss/Mod/Manifester.cpp \
	Boss/Mod/Manifester.hpp \
	Boss/Mod/MoveFundsCommand.cpp \
	Boss/Mod/MoveFundsCommand.hpp \
	Boss/Mod/NeedsConnectSolicitor.cpp \
	Boss/Mod/NeedsConnectSolicitor.hpp \
	Boss/Mod/NeedsOnchainFundsSwapper.cpp \
	Boss/Mod/NeedsOnchainFundsSwapper.hpp \
	Boss/Mod/NewaddrHandler.cpp \
	Boss/Mod/NewaddrHandler.hpp \
	Boss/Mod/NodeBalanceSwapper.cpp \
	Boss/Mod/NodeBalanceSwapper.hpp \
	Boss/Mod/OnchainFeeMonitor.cpp \
	Boss/Mod/OnchainFeeMonitor.hpp \
	Boss/Mod/OnchainFundsAnnouncer.cpp \
	Boss/Mod/OnchainFundsAnnouncer.hpp \
	Boss/Mod/OnchainFundsIgnorer.cpp \
	Boss/Mod/OnchainFundsIgnorer.hpp \
	Boss/Mod/PeerCompetitorFeeMonitor/Main.cpp \
	Boss/Mod/PeerCompetitorFeeMonitor/Main.hpp \
	Boss/Mod/PeerCompetitorFeeMonitor/Surveyor.cpp \
	Boss/Mod/PeerCompetitorFeeMonitor/Surveyor.hpp \
	Boss/Mod/PeerComplaintsDesk/Exempter.cpp \
	Boss/Mod/PeerComplaintsDesk/Exempter.hpp \
	Boss/Mod/PeerComplaintsDesk/Main.cpp \
	Boss/Mod/PeerComplaintsDesk/Main.hpp \
	Boss/Mod/PeerComplaintsDesk/Recorder.cpp \
	Boss/Mod/PeerComplaintsDesk/Recorder.hpp \
	Boss/Mod/PeerComplaintsDesk/Unmanager.cpp \
	Boss/Mod/PeerComplaintsDesk/Unmanager.hpp \
	Boss/Mod/PeerMetrician.cpp \
	Boss/Mod/PeerMetrician.hpp \
	Boss/Mod/PeerStatistician.cpp \
	Boss/Mod/PeerStatistician.hpp \
	Boss/Mod/Reconnector.cpp \
	Boss/Mod/Reconnector.hpp \
	Boss/Mod/RegularActiveProbe.cpp \
	Boss/Mod/RegularActiveProbe.hpp \
	Boss/Mod/Rpc.cpp \
	Boss/Mod/Rpc.hpp \
	Boss/Mod/SelfUptimeMonitor.cpp \
	Boss/Mod/SelfUptimeMonitor.hpp \
	Boss/Mod/SendpayResultMonitor.cpp \
	Boss/Mod/SendpayResultMonitor.hpp \
	Boss/Mod/StatusCommand.cpp \
	Boss/Mod/StatusCommand.hpp \
	Boss/Mod/SwapManager.cpp \
	Boss/Mod/SwapManager.hpp \
	Boss/Mod/TimerTwiceDailyAnnouncer.cpp \
	Boss/Mod/TimerTwiceDailyAnnouncer.hpp \
	Boss/Mod/Timers.cpp \
	Boss/Mod/Timers.hpp \
	Boss/Mod/UnmanagedManager.cpp \
	Boss/Mod/UnmanagedManager.hpp \
	Boss/Mod/Waiter.cpp \
	Boss/Mod/Waiter.hpp \
	Boss/Mod/all.cpp \
	Boss/Mod/all.hpp \
	Boss/ModG/Detail/ReqRespBase.cpp \
	Boss/ModG/Detail/ReqRespBase.hpp \
	Boss/ModG/ReqResp.hpp \
	Boss/ModG/Swapper.cpp \
	Boss/ModG/Swapper.hpp \
	Boss/Msg/AcceptSwapQuotation.hpp \
	Boss/Msg/Begin.hpp \
	Boss/Msg/Block.hpp \
	Boss/Msg/ChannelCreateResult.hpp \
	Boss/Msg/ChannelCreation.hpp \
	Boss/Msg/ChannelDestruction.hpp \
	Boss/Msg/ChannelFunds.hpp \
	Boss/Msg/CommandFail.hpp \
	Boss/Msg/CommandRequest.hpp \
	Boss/Msg/CommandResponse.hpp \
	Boss/Msg/DbResource.hpp \
	Boss/Msg/ForwardFee.hpp \
	Boss/Msg/Init.hpp \
	Boss/Msg/InternetOnline.hpp \
	Boss/Msg/JsonCin.hpp \
	Boss/Msg/JsonCout.hpp \
	Boss/Msg/ListfundsResult.hpp \
	Boss/Msg/ListpeersAnalyzedResult.hpp \
	Boss/Msg/ListpeersResult.hpp \
	Boss/Msg/ManifestCommand.hpp \
	Boss/Msg/ManifestHook.hpp \
	Boss/Msg/ManifestNotification.hpp \
	Boss/Msg/ManifestOption.hpp \
	Boss/Msg/Manifestation.hpp \
	Boss/Msg/NeedsConnect.hpp \
	Boss/Msg/NeedsOnchainFunds.hpp \
	Boss/Msg/Network.hpp \
	Boss/Msg/Notification.hpp \
	Boss/Msg/OnchainFee.hpp \
	Boss/Msg/OnchainFunds.hpp \
	Boss/Msg/Option.hpp \
	Boss/Msg/OptionType.hpp \
	Boss/Msg/PatronizeChannelCandidate.hpp \
	Boss/Msg/PayInvoice.hpp \
	Boss/Msg/PeerMedianChannelFee.hpp \
	Boss/Msg/PeerMetrics.hpp \
	Boss/Msg/PeerStatistics.hpp \
	Boss/Msg/PreinvestigateChannelCandidates.hpp \
	Boss/Msg/ProbeActively.hpp \
	Boss/Msg/ProposeChannelCandidates.hpp \
	Boss/Msg/ProposeConnectCandidates.hpp \
	Boss/Msg/ProposePatronlessChannelCandidate.hpp \
	Boss/Msg/ProvideChannelFeeModifier.hpp \
	Boss/Msg/ProvideHtlcAcceptedDeferrer.hpp \
	Boss/Msg/ProvideStatus.hpp \
	Boss/Msg/ProvideSwapQuotation.hpp \
	Boss/Msg/ProvideUnmanagement.hpp \
	Boss/Msg/RaisePeerComplaint.hpp \
	Boss/Msg/ReleaseHtlcAccepted.hpp \
	Boss/Msg/RequestChannelCreation.hpp \
	Boss/Msg/RequestConnect.hpp \
	Boss/Msg/RequestDowser.hpp \
	Boss/Msg/RequestEarningsInfo.hpp \
	Boss/Msg/RequestGetOnchainIgnoreFlag.hpp \
	Boss/Msg/RequestListpays.hpp \
	Boss/Msg/RequestMoveFunds.hpp \
	Boss/Msg/RequestNewaddr.hpp \
	Boss/Msg/RequestPeerMetrics.hpp \
	Boss/Msg/RequestPeerStatistics.hpp \
	Boss/Msg/RequestSelfUptime.hpp \
	Boss/Msg/ResponseConnect.hpp \
	Boss/Msg/ResponseDowser.hpp \
	Boss/Msg/ResponseEarningsInfo.hpp \
	Boss/Msg/ResponseGetOnchainIgnoreFlag.hpp \
	Boss/Msg/ResponseListpays.hpp \
	Boss/Msg/ResponseMoveFunds.hpp \
	Boss/Msg/ResponseNewaddr.hpp \
	Boss/Msg/ResponsePeerMetrics.hpp \
	Boss/Msg/ResponsePeerStatistics.hpp \
	Boss/Msg/ResponseSelfUptime.hpp \
	Boss/Msg/RpcCommandHook.hpp \
	Boss/Msg/SendpayResult.hpp \
	Boss/Msg/SetChannelFee.hpp \
	Boss/Msg/SolicitChannelCandidates.hpp \
	Boss/Msg/SolicitChannelFeeModifier.hpp \
	Boss/Msg/SolicitConnectCandidates.hpp \
	Boss/Msg/SolicitHtlcAcceptedDeferrer.hpp \
	Boss/Msg/SolicitPeerComplaints.hpp \
	Boss/Msg/SolicitStatus.hpp \
	Boss/Msg/SolicitSwapQuotation.hpp \
	Boss/Msg/SolicitUnmanagement.hpp \
	Boss/Msg/StatusListpays.hpp \
	Boss/Msg/SwapCreation.hpp \
	Boss/Msg/SwapRequest.hpp \
	Boss/Msg/SwapResponse.hpp \
	Boss/Msg/TaskCompletion.hpp \
	Boss/Msg/Timer10Minutes.hpp \
	Boss/Msg/TimerRandomDaily.hpp \
	Boss/Msg/TimerRandomHourly.hpp \
	Boss/Msg/TimerTwiceDaily.hpp \
	Boss/Shutdown.hpp \
	Boss/Signer.cpp \
	Boss/Signer.hpp \
	Boss/concurrent.cpp \
	Boss/concurrent.hpp \
	Boss/log.cpp \
	Boss/log.hpp \
	Boss/random_engine.cpp \
	Boss/random_engine.hpp \
	Boss/open_rpc_socket.cpp \
	Boss/open_rpc_socket.hpp \
	DnsSeed/Detail/decode_bech32_node.cpp \
	DnsSeed/Detail/decode_bech32_node.hpp \
	DnsSeed/Detail/parse_dig_srv.cpp \
	DnsSeed/Detail/parse_dig_srv.hpp \
	DnsSeed/get.cpp \
	DnsSeed/get.hpp \
	Ev/Io.hpp \
	Ev/ThreadPool.cpp \
	Ev/ThreadPool.hpp \
	Ev/concurrent.cpp \
	Ev/concurrent.hpp \
	Ev/foreach.hpp \
	Ev/map.hpp \
	Ev/memoize.hpp \
	Ev/now.cpp \
	Ev/now.hpp \
	Ev/runcmd.cpp \
	Ev/runcmd.hpp \
	Ev/start.cpp \
	Ev/start.hpp \
	Ev/yield.cpp \
	Ev/yield.hpp \
	Graph/Dijkstra.hpp \
	Graph/TreeNode.hpp \
	Jsmn/Detail/EndAdvancer.cpp \
	Jsmn/Detail/EndAdvancer.hpp \
	Jsmn/Detail/Iterator.cpp \
	Jsmn/Detail/Iterator.hpp \
	Jsmn/Detail/ParseResult.hpp \
	Jsmn/Detail/Str.cpp \
	Jsmn/Detail/Str.hpp \
	Jsmn/Detail/Token.cpp \
	Jsmn/Detail/Token.hpp \
	Jsmn/Detail/Type.hpp \
	Jsmn/Object.cpp \
	Jsmn/Object.hpp \
	Jsmn/Parser.cpp \
	Jsmn/Parser.hpp \
	Jsmn/jsonify_string.cpp \
	Jsmn/jsonify_string.hpp \
	Json/Out.hpp \
	Ln/Amount.cpp \
	Ln/Amount.hpp \
	Ln/HtlcAccepted.cpp \
	Ln/HtlcAccepted.hpp \
	Ln/NodeId.cpp \
	Ln/NodeId.hpp \
	Ln/Preimage.cpp \
	Ln/Preimage.hpp \
	Ln/Scid.cpp \
	Ln/Scid.hpp \
	Net/Connector.hpp \
	Net/Detail/AddrInfoReleaser.cpp \
	Net/Detail/AddrInfoReleaser.hpp \
	Net/DirectConnector.cpp \
	Net/DirectConnector.hpp \
	Net/Fd.cpp \
	Net/Fd.hpp \
	Net/IPAddr.cpp \
	Net/IPAddr.hpp \
	Net/IPAddrOrOnion.cpp \
	Net/IPAddrOrOnion.hpp \
	Net/IPBinnerBySubnet.cpp \
	Net/IPBinnerBySubnet.hpp \
	Net/IPBinnerIF.hpp \
	Net/ProxyConnector.cpp \
	Net/ProxyConnector.hpp \
	Net/SocketFd.cpp \
	Net/SocketFd.hpp \
	Net/get_bin_of_onion.cpp \
	Net/get_bin_of_onion.hpp \
	Ripemd160/Hash.cpp \
	Ripemd160/Hash.hpp \
	Ripemd160/Hasher.cpp \
	Ripemd160/Hasher.hpp \
	S/Bus.cpp \
	S/Bus.hpp \
	S/Detail/Signal.hpp \
	S/Detail/SignalBase.hpp \
	Secp256k1/Detail/context.cpp \
	Secp256k1/Detail/context.hpp \
	Secp256k1/G.cpp \
	Secp256k1/G.hpp \
	Secp256k1/KeyPair.hpp \
	Secp256k1/PrivKey.cpp \
	Secp256k1/PrivKey.hpp \
	Secp256k1/PubKey.cpp \
	Secp256k1/PubKey.hpp \
	Secp256k1/Random.cpp \
	Secp256k1/Random.hpp \
	Secp256k1/Signature.cpp \
	Secp256k1/Signature.hpp \
	Secp256k1/SignerIF.hpp \
	Sha256/Hash.cpp \
	Sha256/Hash.hpp \
	Sha256/Hasher.cpp \
	Sha256/Hasher.hpp \
	Sha256/HasherStream.cpp \
	Sha256/HasherStream.hpp \
	Sha256/fun.hpp \
	Sqlite3.hpp \
	Sqlite3/Db.cpp \
	Sqlite3/Db.hpp \
	Sqlite3/Detail/binds.cpp \
	Sqlite3/Detail/binds.hpp \
	Sqlite3/Detail/columns.cpp \
	Sqlite3/Detail/columns.hpp \
	Sqlite3/Query.cpp \
	Sqlite3/Query.hpp \
	Sqlite3/Result.cpp \
	Sqlite3/Result.hpp \
	Sqlite3/Tx.cpp \
	Sqlite3/Tx.hpp \
	Stats/ReservoirSampler.hpp \
	Stats/RunningMean.cpp \
	Stats/RunningMean.hpp \
	Stats/WeightedMedian.hpp \
	Util/Bech32.cpp \
	Util/Bech32.hpp \
	Util/Rw.cpp \
	Util/Rw.hpp \
	Util/Str.cpp \
	Util/Str.hpp \
	Util/make_unique.hpp \
	Util/stringify.hpp \
	Util/vector_emplace_back.hpp \
	Uuid.cpp \
	Uuid.hpp

libclboss_la_LIBADD = \
	external/basicsecure/libbasicsecure.la \
	external/bitcoin-ripemd160/libbitcoin-ripemd160.la \
	external/bitcoin-sha256/libbitcoin-sha256.la \
	external/secp256k1/libsecp256k1.la
libclboss_la_CPPFLAGS = \
	-I$(top_srcdir)/external/basicsecure/ \
	-I$(top_srcdir)/external/bitcoin-ripemd160/ \
	-I$(top_srcdir)/external/bitcoin-sha256/ \
	-I$(top_srcdir)/external/secp256k1/include/ \
	-I$(top_srcdir)/external/jsmn

dev_boltz_CPPFLAGS = \
	-I$(top_srcdir)/external/basicsecure/

# Externals
SUBDIRS = \
	external/basicsecure \
	external/bitcoin-ripemd160 \
	external/bitcoin-sha256 \
	external/secp256k1/
EXTRA_DIST = \
	external/jsmn/LICENSE \
	external/jsmn/jsmn.h \
	reproducible/README.md \
	reproducible/build.sh \
	reproducible/continue.sh \
	reproducible/manifest.scm.template 

AM_CXXFLAGS = -Wall -Werror $(PTHREAD_CFLAGS) $(libev_CFLAGS) $(SQLITE3_CFLAGS) $(CURL_CFLAGS) $(CLBOSS_CXXFLAGS)
LDADD = libclboss.la $(PTHREAD_LIBS) $(libev_LIBS) $(SQLITE3_LIBS) $(CURL_LIBS)

ACLOCAL_AMFLAGS = -I m4

AM_DEFAULT_SOURCE_EXT = .cpp
TESTS = \
	tests/bitcoin/test_addr_to_scriptpubkey \
	tests/bitcoin/test_serial \
	tests/bitcoin/test_sighash \
	tests/bitcoin/test_tx \
	tests/boltz/test_match_lockscript \
	tests/boss/channelcandidateinvestigator/test_gumshoe \
	tests/boss/channelcandidateinvestigator/test_secretary \
	tests/boss/test_channelcreationdecider \
	tests/boss/test_channelcreator_planner \
	tests/boss/test_channelcreator_rearrangerbysize \
	tests/boss/test_channelcreator_reprioritizer \
	tests/boss/test_feemodderbypricetheory \
	tests/boss/test_initialrebalancer \
	tests/boss/test_needsconnectsolicitor \
	tests/boss/test_onchainfeemonitor_samples_init \
	tests/boss/test_peerstatistician \
	tests/boss/test_peercomplaintsdesk_recorder \
	tests/boss/test_reqresp \
	tests/boss/test_rpc \
	tests/boss/test_swapmanager \
	tests/boss/test_unmanagedmanager \
	tests/boss/test_version \
	tests/boss/test_waiter_timed \
	tests/dnsseed/test_decode_bech32_node \
	tests/dnsseed/test_get \
	tests/dnsseed/test_parse_dig_srv \
	tests/ev/test_concurrent_simple \
	tests/ev/test_io_mem_leak \
	tests/ev/test_map \
	tests/ev/test_memoize \
	tests/ev/test_plus \
	tests/ev/test_runcmd \
	tests/ev/test_throw_in_then \
	tests/graph/test_dijkstra \
	tests/jsmn/test_iterator \
	tests/json/test_out_simple \
	tests/ln/test_amount \
	tests/ln/test_htlcaccepted \
	tests/ln/test_nodeid \
	tests/ln/test_scid \
	tests/net/test_ipaddr \
	tests/net/test_ipaddroronion \
	tests/ripemd160/test_ripemd160 \
	tests/s/test_bus \
	tests/sha256/test_hash \
	tests/sha256/test_hasher \
	tests/sqlite3/test_sqlite3 \
	tests/stats/test_reservoir_sampler \
	tests/stats/test_running_mean \
	tests/stats/test_weighted_median \
	tests/test_uuid
check_PROGRAMS = $(TESTS)

if USE_VALGRIND
LOG_COMPILER = valgrind
AM_LOG_FLAGS = --leak-check=full --error-exitcode=1
endif
