[tool.poetry]
name = "contrib"
version = "0.1.0"
description = "A project to help manage CLBOSS contrib python dependencies"
authors = ["Ken Sedgwick <ken@bonsai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.9.0"
wcwidth = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
